<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:text=""
        android:id="@+id/textHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/ivUser"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_test_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_corner_radius="25dp" />

        <TextView
            android:id="@+id/tvGreetings"
            style="@style/TextH2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/greetings"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toTopOf="@+id/tvName"
            app:layout_constraintStart_toEndOf="@+id/ivUser"
            app:layout_constraintTop_toTopOf="@id/ivUser"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvName"
            style="@style/TextH2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/ivUser"
            app:layout_constraintStart_toStartOf="@+id/tvGreetings"
            app:layout_constraintTop_toBottomOf="@+id/tvGreetings"
            tools:text="Дарья" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginEnd="20dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_notification"
            app:layout_constraintBottom_toBottomOf="@+id/ivUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivUser"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tvTodayTitle"
            style="@style/TextH2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/today"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="@+id/ivUser"
            app:layout_constraintTop_toBottomOf="@+id/ivUser" />

        <TextView
            android:id="@+id/tvNewsTitle"
            style="@style/TextH2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvTodayTitle"
            app:layout_constraintTop_toTopOf="@+id/tvTodayTitle" />

        <TextView
            android:id="@+id/tvTodayDescription"
            style="@style/TextH2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Понедельник, 11 июля"
            app:layout_constraintEnd_toStartOf="@+id/tvNewsDescription"
            app:layout_constraintStart_toStartOf="@+id/tvTodayTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvTodayTitle" />

        <TextView
            android:id="@+id/tvNewsDescription"
            style="@style/TextH2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="4 новые заметки"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/tvNewsTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvNewsTitle" />

        <EditText
            android:id="@+id/etSearch"
            style="@style/TextH3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_login_edit_text"
            android:hint="@string/hintSearch"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="8dp"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            app:layout_constraintEnd_toEndOf="@+id/tvNewsDescription"
            app:layout_constraintStart_toStartOf="@+id/tvTodayDescription"
            app:layout_constraintTop_toBottomOf="@+id/tvTodayDescription"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/tvNewNotesLabel"
            style="@style/TextH1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/labelNewNotes"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="@+id/etSearch"
            app:layout_constraintStart_toStartOf="@+id/etSearch"
            app:layout_constraintTop_toBottomOf="@+id/etSearch" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vpAllNotes"
            android:layout_width="0dp"
            android:layout_height="136dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="@+id/tvNewNotesLabel"
            app:layout_constraintStart_toStartOf="@+id/tvNewNotesLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvNewNotesLabel" />

    <TextView
        android:id="@+id/tvTasksLabel"
        style="@style/TextH1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/labelNewTasks"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="@+id/etSearch"
        app:layout_constraintTop_toBottomOf="@+id/vpAllNotes" />

    <Button
        style="@style/TextH2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/allTasks"
        android:textColor="@color/gray"
        android:paddingEnd="0dp"
        android:gravity="end|center_vertical"
        app:layout_constraintEnd_toEndOf="@+id/etSearch"
        app:layout_constraintTop_toTopOf="@+id/tvTasksLabel"
        app:layout_constraintBottom_toBottomOf="@+id/tvTasksLabel"

        />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/tvNewNotesLabel"
            app:layout_constraintEnd_toEndOf="@+id/tvNewNotesLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvTasksLabel"
            >

        </androidx.recyclerview.widget.RecyclerView>
</androidx.constraintlayout.widget.ConstraintLayout>